<resources>
    <string name="app_name">HealthApp</string>
    <string name="water_empty">No water logged yet</string>
    <string name="water_total">Total: %1$d ml</string>
    <string name="add_water">Add water</string>
    <string name="water_error">%1$s</string>
    <string name="default_web_client_id">1:605459733678:android:cc891d4d7f6d3dfa5ca13f</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>
